# NanoTekSpicySpicy

./: .cirrus.yml  .clang-format  .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  _a_component_8hpp.html  _a_component_8hpp_source.html  _circuit_8cpp__incl.md5  _circuit_8hpp.html  _circuit_8hpp__dep__incl.md5  _circuit_8hpp__incl.map  _component2716_8cpp__incl.md5  _component2716_8hpp__incl.md5  _component4001_8hpp__dep__incl.map  _component4001_8hpp__dep__incl.md5  _component4001_8hpp__incl.map  _component4001_8hpp_source.html  _component4008_8cpp__incl.map  _component4008_8cpp__incl.md5  _component4008_8hpp.html  _component4008_8hpp__dep__incl.map  _component4008_8hpp__incl.map  _component4008_8hpp_source.html  _component4011_8cpp__incl.map  _component4011_8cpp__incl.md5  _component4011_8hpp__dep__incl.md5  _component4013_8cpp.html  _component4013_8hpp__incl.md5  _component4013_8hpp_source.html  _component4017_8cpp.html  _component4017_8hpp__incl.map  _component4030_8cpp__incl.map  _component4030_8hpp.html  _component4030_8hpp__dep__incl.map  _component4030_8hpp__incl.map  _component4030_8hpp_source.html  _component4040_8hpp__incl.map  (+128 more)
.github/: restyled.yaml
.github/workflows/: cmake.yml  mirroring.yml
Docs/: Doxyfile
Src/: Circuit.cpp  Circuit.hpp  Component.cpp  Component.hpp  IComponent.hpp  Parser.cpp  Parser.hpp
Src/Components/: Component4001.hpp
docs/: Doxyfile
docs/html/: _a_component_8cpp.html  _a_component_8cpp__incl.map  _a_component_8cpp__incl.md5  _a_component_8hpp__dep__incl.map  _a_component_8hpp__dep__incl.md5  _a_component_8hpp__incl.map  _a_component_8hpp__incl.md5  _circuit_8cpp.html  _circuit_8cpp__incl.map  _circuit_8hpp__dep__incl.map  _circuit_8hpp__incl.md5  _circuit_8hpp_source.html  _component2716_8cpp.html  _component2716_8cpp__incl.map  _component2716_8hpp.html  _component2716_8hpp__dep__incl.map  _component2716_8hpp__dep__incl.md5  _component2716_8hpp__incl.map  _component2716_8hpp_source.html  _component4001_8cpp.html  _component4001_8cpp__incl.map  _component4001_8cpp__incl.md5  _component4001_8hpp.html  _component4001_8hpp__incl.md5  _component4008_8cpp.html  (+259 more)
search/: all_10.js  all_13.js  all_14.js  all_8.js  all_a.js  all_c.js  all_f.js  classes_3.js  classes_4.js  classes_6.js  classes_8.js  enums_0.js  enumvalues_4.js  files_4.js  files_5.js  functions_1.js  functions_3.js  functions_7.js  functions_8.js  functions_a.js  functions_d.js  namespaces_0.js  variables_1.js
src/: AComponent.cpp  AComponent.hpp  Circuit.cpp  Circuit.hpp  Component.cpp  Component.hpp  Exception.cpp  Exception.hpp  Factory.cpp  Factory.hpp  IComponent.hpp  Parser.cpp  Parser.hpp  Simulation.cpp  Simulation.hpp  main.cpp
tests/: test.cpp
(+74 files in other folders)
